--- a/emerald lake.css
+++ b/emerald lake.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 /*emerald lake.css*/
 
 body{
@@ -9,16 +8,13 @@ body{
     margin-left: auto;
     margin-right: auto;
     width: 50%;
-=======
-/*emerald lake.css*/
+}
 
-body{
-    background-color: white;
+.special-passage{
+    margin-right:25%;
+    margin-left:25%;
+    
 }
-.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
->>>>>>> 7395e3d2e5b2b6740b401538c407f1080ebf6786
-}
+
+ 
+
